fix: whitespace

--- a/app/styles/message-card.scss
+++ b/app/styles/message-card.scss
@@ -133,6 +133,7 @@ a.message-card-header-logo:hover {
 
 .message-card-content {
   padding-top: 0.5rem;
+  white-space: break-spaces;
 }
 
 .message-card-skeleton {
